# layered

./: .gitignore  README.md
.github/workflows/: deploy.yml
docs/: package-lock.json
docs/src/: api-examples.md  index.md
docs/src/.vitepress/: config.mjs
docs/src/getstart/: abstract.md  howToUse.md
docs/src/summary/: BasicDesign.md  WhatIsABI.md  abstract.md
layered-parser/: pom.xml
layered-parser/src/main/java/: module-info.java
layered-parser/src/main/java/org/swdc/clang/framework/: CLangParser.java  ClangContext.java  ClangDeclaredContext.java  ClangDelegateContext.java  ClangUtils.java  FileUtils.java  ParseException.java  ParseExceptionElement.java
layered-parser/src/main/java/org/swdc/clang/framework/def/: AbstractNativeType.java  BasicType.java  NameCaster.java  NativeArrayType.java  NativeClassType.java  NativeConstant.java  NativeEnumField.java  NativeEnumType.java  NativeField.java  NativeFunction.java  NativeFunctionParam.java  NativePointerType.java  NativeStructType.java  TypeParameterized.java
layered-parser/src/test/java/org/swdc/clang/test/: TestClangParser.java
layered-plugin/: pom.xml
layered-plugin/src/main/java/org/swdc/layered/plugin/: LayeredParserGenerate.java
layered-runtime/: README.md  pom.xml
layered-runtime/native/: CMakeLists.txt  vcpkg.json
layered-runtime/native/include/: ExternalInvoker.h  MemoryManager.h
layered-runtime/native/include/jni/: jni.h
layered-runtime/native/src/: ExternalInvoker.cpp  MemoryManager.cpp  Util.cpp
layered-runtime/native/triplets/: x64-linux.cmake
layered-runtime/src/main/java/: module-info.java
layered-runtime/src/main/java/org/swdc/layered/: ExternalInvoker.java  MemoryManager.java  NativeType.java
layered-runtime/src/main/java/org/swdc/layered/anno/: ByteString.java  Cast.java  CastValue.java  ConstArray.java  PlatformType.java  Symbol.java  SymbolAccessor.java  SymbolCtor.java  SymbolDtor.java  SymbolFactory.java  SymbolGetter.java  SymbolSetter.java  TypeMeta.java  Unsigned.java
layered-runtime/src/main/java/org/swdc/layered/def/: CIFTypes.java  FFIUtils.java  NativeDefinition.java  PlatformCall.java  PlatformCallHandler.java  PlatformCallback.java  PlatformClosure.java  PlatformModule.java  WritableFunction.java  WritableParameter.java  Writeable.java
layered-runtime/src/main/java/org/swdc/layered/module/: AbstractLayerLibrary.java  LayerLibrary.java  LibraryDescriptor.java  LoadDescriptor.java
layered-runtime/src/main/java/org/swdc/layered/pointers/: AddressPointer.java  Allocator.java  BooleanPointer.java  BytePointer.java  DoublePointer.java  FloatPointer.java  IntPointer.java  LongPointer.java  ObjectivePointer.java  OpaquePointer.java  SeekablePointer.java  ShortPointer.java
(+22 files in other folders)
